kube-security/network-policies/allow-discord.yaml
apiVersion: crd.projectcalico.org/v1
kind: GlobalNetworkPolicy
metadata:
  name: allow-discord
spec:
  selector: app == "backend"
  egress:
    - action: Allow
      protocol: TCP
      destination:
        ports:
          - 443
        nets:
          # Discord rule through Cloudflare
          - 162.159.128.0/17
          - 104.16.0.0/13
          - 104.24.0.0/14
  ingress:
    - action: Allow
  types:
    - Ingress
    - Egress
