kube-security/network-policies/frontend-restrict-basic.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frontend-restrict-basic
  namespace: employee-leave
spec:
  podSelector:
    matchLabels:
      app: frontend
  policyTypes:
    - Ingress
    - Egress
  ingress:
    # Allow external traffic directly to the frontend LoadBalancer service.
    - ports:
        - protocol: TCP
          port: 80

  egress:
    # 🔹 Permite DNS (către CoreDNS în kube-system)
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53

    # Allow communication to the backend inside the employee-leave namespace.
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: employee-leave
          podSelector:
            matchLabels:
              app: backend
      ports:
        - protocol: TCP
          port: 5000
